Catalogue is now functional on IE7 + some CSS fixes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,6 +12,8 @@
 	color:#33332F;
 }
 
+.clearfix { clear:both; }
+
 small {
 	font-size:0.8em;
 	color:inherit;
